Oppdaterte dolly-api til å bruke jib-distroless convention